[package]
name = "slack-port-config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"]}
serde_json = "1.0"
tungstenite = {version = "0.16.0", features = ["native-tls"]}
url = "2"
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4"
log = "0.4"